# spotify-tray

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  spotify-tray.desktop.in  spotify-tray.spec.in
src/: Makefile.am  main.c  proxy.c  proxy.h  tray_dbus.c  tray_dbus.h  tray_status_icon.c  tray_status_icon.h  winctrl.c  winctrl.h
